# robotin-try1

./: .env.example  .gitignore  AGENTS.md  DECISIONS.md  MASTER_PROMPT.md  README.md  Revision01.md  Revision02.md  SAFETY.md  TASKS.md  TasksRemedy.md  pyproject.toml
.github/workflows/: ci.yml
.opencode/agents/: ai-client.md  application.md  architect.md  docs.md  domain.md  hardware-abstraction.md  infrastructure.md  safety.md  scaffolder.md  tester.md  voice.md
docs/: architecture.md  development.md  protocol.md  raspberry_setup.md
scripts/: demo_eyes_gc9a01.py  preview_eyes.py
src/robotin/: __init__.py  config.py  events.py  main.py  state_machine.py
src/robotin/application/: __init__.py  audio_turn.py  controller.py  runtime.py
src/robotin/domain/: __init__.py  robot_state.py
src/robotin/infrastructure/: __init__.py  ai_client_http.py  ai_client_mock.py  display_gc9a01.py  display_mock.py  eyes_preview.py  eyes_renderer.py  microphone_mock.py  stt_mock.py  stt_remote.py  tts_mock.py  wake_word_mock.py
src/robotin/interfaces/: __init__.py  ai_client.py  display.py  microphone.py  stt.py  tts.py  wake_word.py
tests/: test_ai_client_http.py  test_ai_client_mock.py  test_audio_turn.py  test_config.py  test_controller.py  test_display_gc9a01.py  test_events.py  test_eyes_renderer.py  test_main.py  test_microphone_wake_word_mocks.py  test_preview_eyes.py  test_runtime.py  test_state_machine.py  test_stt_mock.py  test_stt_remote.py
